# rust-webgpu-visual-engine

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  index.html
examples/: gpu_smoke.rs  mtsdf_video_flow.rs
shaders/: particles_update.wgsl
src/: lib.rs  main.rs  quality.rs  timeline.rs
src/particles/: compute.rs  config.rs  gpu.rs  mod.rs  simulation.rs
web/: index.html  main.js  styles.css
